tests/kyverno-policies/add-image-pull-secret/paas-add-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-add
  namespace: paas
spec:
  imagePullSecrets:
  - name: osc-registry
  - name: test
  containers:
    - name: nginx
      image: nginx:latest
