tests/kyverno-policies/add-image-pull-secret/paas-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
spec:
  imagePullSecrets:
  - name: osc-registry
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
