tests/kyverno-policies/add-image-pull-secret/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-add
  namespace: paas
spec:
  imagePullSecrets:
  - name: test
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-skip-no-secret
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
