tests/kyverno-policies/add-image-pull-secret/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-image-pull-secret
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-image-pull-secret
    rule: paas-osc-registry
    resources:
      - test-paas
    patchedResources: paas-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-image-pull-secret
    rule: paas-osc-registry
    resources:
      - test-paas-add
    patchedResources: paas-add-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-image-pull-secret
    rule: paas-osc-registry
    resources:
      - test-paas-skip
      - test-paas-skip-no-secret
    kind: Pod
    result: skip
